# DADApy

./: .coveragerc  .gitignore  .nfs00000000026fca7c0000003d  .readthedocs.yaml  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  Untitled.ipynb  codecov.yml  project.toml  pyproject.toml  requirements.txt  rosslers_xtoy_trajectory.npy  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  lint.yml  test.yml
cython_/: cython_functions.c  cython_functions.html  cython_functions.pyx  setup.py
dadapy/: __init__.py  _base.py  base.py  causal_graph.py  clustering.py  data.py  data_sets.py  density_advanced.py  density_estimation.py  diff_imbalance.py  dii_weighting.py  feature_selection.py  feature_weighting.py  hamming.py  id_discrete.py  id_estimation.py  kstar.py  metric_comparisons.py  neigh_graph.py  neighbourhood_graph.py  plot.py
dadapy/_cython/: __init__.c  cython_clustering.c  cython_clustering.html  cython_clustering.pyx  cython_clustering2.pyx  cython_clustering_v2.c  cython_clustering_v2.html  cython_clustering_v2.pyx  cython_density.c  cython_density.pyx  cython_differentiable_imbalance.c  cython_differentiable_imbalance.pyx  cython_distances.c  cython_distances.pyx  cython_grads.c  cython_grads.html  cython_grads.pyx  cython_maximum_likelihood_opt.c  cython_maximum_likelihood_opt.pyx  cython_maximum_likelihood_opt_full.c  cython_maximum_likelihood_opt_full.pyx  cython_overlap.c  cython_overlap.pyx  differentiable_imbalance.pyx  setup.py
dadapy/_utils/: __init__.py  density_estimation.py  differentiable_imbalance.py  discrete_functions.py  id_estimation.py  metric_comparisons.py  stochastic_minimization_hamming.py  utils.py
dadapy/cython_/: cython_clustering.c  cython_clustering.pyx  cython_density.c  cython_density.pyx  cython_grads.c  cython_grads.pyx  cython_maximum_likelihood_opt.c  cython_maximum_likelihood_opt.html  cython_maximum_likelihood_opt.pyx  cython_periodic_dist.c  cython_periodic_dist.html  cython_periodic_dist.pyx  setup.py
dadapy/utils_/: density_estimation.py  discrete_functions.py  metric_comparisons.py  mlmax.py  mlmax_pytorch.py  utils.py
dev_scripts/: spell-check.sh  whitelist.py
docs/source/: base.rst  causal_graph.rst  citing.rst  clustering.rst  conf.py  (+27 more)
duly/: Untitled.ipynb  __init__.py  _base.py  clustering.py  data.py  data_sets.py  datasets.py  density_estimation.py  density_estimation_obsolete.py  id_discrete.py  id_estimation.py  metric_comparisons.py  mlmax.py  plot.py  requirements.txt  utils.py
examples/: notebook_BMTI.ipynb  notebook_abide_agride.ipynb  notebook_beta_hairpin.ipynb  notebook_hamming.ipynb  notebook_mobius.ipynb  notebook_on_causal_graph.ipynb  notebook_on_differentiable_imbalance.ipynb  notebook_on_differentiable_imbalance_jax.ipynb  notebook_on_discreteID.ipynb  notebook_on_inf_imbalance_NOT_WORKING.ipynb  notebook_on_information_imbalance.ipynb  notebook_on_intrinsic_dimension.ipynb  notebook_on_intrinsicdim_densityest_clustering.ipynb
test/: conftest.py  test_clustering.py  test_density_estimation.py  test_dicrete_id.py  test_discrete_id.py  test_information_imbalance.py
tests/: 2gaussians_in_2d.npy  2gaussians_in_2d_overlap.npy  3d_gauss_small_z_var.npy  conftest.py  rosslers_xtoy_trajectory.npy  test_clustering.py  test_discrete_id.py  test_information_imbalance.py
(+2097 files in other folders)
