[project]
name = "dadapy"
version = "0.3.1"
description = "Distance-based Analysis of DAta-manifolds in python"
authors = [{ name = "DADApy author"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"

dependencies = ["numpy<2.0", "scipy", "scikit-learn", "matplotlib", "seaborn"]

[project.urls]
homepage = "https://github.com/sissa-data-science/DADApy"
documentation = "https://dadapy.readthedocs.io/"
repository = "https://github.com/sissa-data-science/DADApy"

[project.optional-dependencies]
dev = ["tox", "black", "isort", "pytest"]

[build-system]
requires = ["setuptools>=61", "numpy<2.0"]
build-backend = "setuptools.build_meta"

[tool.tox]
envlist = ["py37", "py38", "py39", "py310", "py311", "py12"]
