[bdist_wheel]
universal = 1

[aliases]
test = pytest

[metadata]
license_file = LICENCE

[flake8]
ignore = W503,E203
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    tests/fixtures/*,
    *.md,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    black_it/__init__.py,
    scripts/whitelist.py
max-complexity = 10
max-line-length = 120

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
ensure_newline_before_comments=True

[black]
exclude = "dev_scripts/whitelist.py"

[darglint]
docstring_style=google
strictness=short
ignore_regex=
ignore=DAR401,DAR105